no more creation of Boolean objects.